src/content/docs/0.10.0/configuration/search.mdx
---
title: Search pane
description: Configuring rmpc's search pane
sidebar:
  order: 80
slug: 0.10.0/configuration/search
---

import ConfigValue from "../../../../components/ConfigValue.tsx";

## case\_sensitive

<ConfigValue name="case_sensitive" type="bool" />

Whether the filter should be case sensitive by default. Default is `false`.

:::note
Cannot be enabled at the same time as [ignore\_diacritics](#ignore_diacritics).
:::

## ignore\_diacritics

<ConfigValue name="ignore_diacritics" type="bool" />

Whether the filter should ignore diacritics by default. Default is `false`.

:::note
Cannot be enabled at the same time as [case\_sensitive](#case_sensitive).
:::

:::note
This option requires MPD version 0.25.0 or newer to work
:::

## search\_button

<ConfigValue name="search_button" type="bool" />

Display a dedicated search button in the search from when set to true. Otherwise the search is triggered
on every change. Defaults to `false`.

## mode

<ConfigValue name="mode" type={["Exact", "StartsWith", "Contains", "Regex"]} />

What kind if filter to use by default. Default is `Contains`.

## tags

<ConfigValue name="tags" customText="<(label: <string>, value: <string>)[]>" />

Array of tags to list as searchable on the Search pane. Each tag consists of a label and value.
If not specified, the [default values](/0.10.0/reference/config) are used. If empty array is passed,
a value of `[(label: "Any Tag", value: "any")]` will be used instead. For a list of supported tags
refer to [MPD's documentation](https://mpd.readthedocs.io/en/latest/protocol.html#tags). Special
tag `any` will check all possible tags.
